--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Girl's day</title>
     <link rel="icon" href="./images/icon.png" />
-    <link rel="stylesheet" href="./stylestest.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Archivo|Comfortaa|EB+Garamond"
       rel="stylesheet"
