--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Girl's day</title>
-    <link rel="icon" href="./images/icon.png" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="icon" href="/images/icon.png" />
+    <link rel="stylesheet" href="/styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Archivo|Comfortaa|EB+Garamond"
       rel="stylesheet"
@@ -17,20 +17,22 @@
   </head>
   <body>
     <header>
-      <div>
-        <img src="images/logo.svg" />
+      <div class="logo">
+        <a href="index.html">
+          <img src="/images/logo.svg" />
+        </a>
       </div>
       <nav>
         <ul>
-          <a class="active" href="#aboutme">ABOUT ME</a>
-          <a href="#skills">SKILLS</a>
-          <a href="#contacts">CONTACTS</a>
+          <li class="active"><a href="#aboutme">ABOUT ME</a></li>
+          <li><a href="#skills">SKILLS</a></li>
+          <li><a href="#contacts">CONTACTS</a></li>
         </ul>
       </nav>
     </header>
     <section class="main" id="aboutme">
-      <div class="left centered">
-        <article>
+      <article>
+        <div class="left">
           <h1>About me</h1>
           <p>
             Audrey Hepburn was a British actress, model, dancer, and
@@ -39,113 +41,112 @@
             third-greatest female screen legend in Golden Age Hollywood, and was
             inducted into the International Best Dressed List Hall of Fame.
           </p>
-        </article>
-      </div>
-      <div class="right">
-        <img alt="Audrey portrait" src="./images/audreyHep.png" />
-      </div>
+        </div>
+        <div class="right">
+          <img src="/images/audreyHep.png" alt="Audrey picture" />
+        </div>
+      </article>
     </section>
     <section id="skills">
-      <div class="left centered">
+      <div class="left">
         <article>
           <h1>Skills</h1>
           <ul>
             <li class="hard-skill-item">
               <span>CSS</span>
               <div>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
               </div>
             </li>
             <li class="hard-skill-item">
               <span>HTML</span>
               <div>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
               </div>
             </li>
             <li class="hard-skill-item">
               <span>PHOTOSHOP</span>
               <div>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart  skill-empty"></i>
+                <i class="fa fa-heart  skill-empty"></i>
+                <i class="fa fa-heart  skill-empty"></i>
               </div>
             </li>
             <li class="hard-skill-item">
-              <span>WEBDESIGN</span>
+              <span>WEB DESIGN</span>
               <div>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x"></i>
-                <i class="fa fa-heart fa-3x skill-empty"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart  skill-empty"></i>
+                <i class="fa fa-heart  skill-empty"></i>
               </div>
             </li>
           </ul>
         </article>
       </div>
-      <div class="right">
+      <div class="quote-parent">
         <div class="quote">
-          <img src=" ./images/quote-mark.svg" alt="qoute mark" />
-          <q class="quote-text"
-            >For me the only things of interests are those linked to the
-            heart.</q
-          >
+          <img src="/images/quote-mark.svg" />
+          <p class="quote-text">
+            For me the only things of interests are those linked to the heart.
+          </p>
           <span class="quote-name">----- Audrey Hepburn -----</span>
         </div>
       </div>
     </section>
+    <footer>
+      <section id="contacts">
+        <article>
+          <div>
+            <h3>Let's meet</h3>
+            <ul>
+              <li>
+                <i class="fas fa-phone"></i>
+                <a href="tel:+421949044400">+421 949 044 400</a>
+              </li>
+              <li>
+                <i class="fas fa-envelope"></i>
+                <a href="mailto:abc@example.com">abc@example.com</a>
+              </li>
+            </ul>
+          </div>
+        </article>
+        <article>
+          <div>
+            <h3>Follow me</h3>
+            <ul>
+              <li>
+                <span>Follow me on social media</span>
+              </li>
+              <li>
+                <span>Stay tuned!</span>
+              </li>
+              <li>
+                <a href="https://www.facebook.com"
+                  ><i class="fab fa-facebook-square connect-icons"></i
+                ></a>
+                <a href="https://www.instagram.com"
+                  ><i class="fab fa-instagram connect-icons"></i
+                ></a>
+                <a href="https://www.twitter.com"
+                  ><i class="fab fa-twitter connect-icons"></i
+                ></a>
+              </li>
+            </ul>
+          </div>
+        </article>
+      </section>
+    </footer>
   </body>
-  <footer>
-    <section class="contact-section" id="contacts">
-      <article>
-        <div>
-          <h3>Let's meet</h3>
-          <ul>
-            <li>
-              <i class="fas fa-phone"></i>
-              <a href="tel:+421949044400">+421 949 044 400</a>
-            </li>
-            <li>
-              <i class="fas fa-envelope"></i>
-              <a href="mailto:abc@example.com">abc@example.com</a>
-            </li>
-          </ul>
-        </div>
-      </article>
-      <article>
-        <div>
-          <h3>Follow me</h3>
-          <ul>
-            <li>
-              <span>Follow me on social media</span>
-            </li>
-            <li>
-              <span>Stay tuned!</span>
-            </li>
-            <li>
-              <a href="https://www.facebook.com"
-                ><i class="fab fa-facebook-square connect-icons"></i
-              ></a>
-              <a href="https://www.instagram.com"
-                ><i class="fab fa-instagram connect-icons"></i
-              ></a>
-              <a href="https://www.twitter.com"
-                ><i class="fab fa-twitter connect-icons"></i
-              ></a>
-            </li>
-          </ul>
-        </div>
-      </article>
-    </section>
-  </footer>
 </html>
