--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
   <head>
     <title>Girl's day</title>
-    <link rel="icon" href="/images/icon.png" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" href="images/icon.png" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Archivo|Comfortaa|EB+Garamond"
       rel="stylesheet"
@@ -18,15 +18,13 @@
   <body>
     <header>
       <div class="logo">
-        <a href="index.html">
-          <img src="/images/logo.svg" />
-        </a>
+        <img src="images/logo.svg" />
       </div>
       <nav>
         <ul>
-          <li class="active"><a href="#aboutme">ABOUT ME</a></li>
-          <li><a href="#skills">SKILLS</a></li>
-          <li><a href="#contacts">CONTACTS</a></li>
+          <li class="active"><a href="#aboutme">About me</a></li>
+          <li><a href="#skills">Skills</a></li>
+          <li><a href="#contacts">Contacts</a></li>
         </ul>
       </nav>
     </header>
@@ -36,10 +34,10 @@
           <h1>About me</h1>
           <p>
             Audrey Hepburn was a British actress, model, dancer, and
-            <strong>humanitarian</strong>. Recognised as a film and fashion
-            icon. She was ranked by the American Film Institute as the
-            third-greatest female screen legend in Golden Age Hollywood, and was
-            inducted into the International Best Dressed List Hall of Fame.
+            humanitarian. Recognised as a film and fashion icon. She was ranked
+            by the American Film Institute as the third-greatest female screen
+            legend in Golden Age Hollywood, and was inducted into the
+            International Best Dressed List Hall of Fame.
           </p>
         </div>
         <div class="right">
@@ -53,7 +51,7 @@
           <h1>Skills</h1>
           <ul>
             <li class="hard-skill-item">
-              <span>CSS</span>
+              <span>css</span>
               <div>
                 <i class="fa fa-heart"></i>
                 <i class="fa fa-heart"></i>
@@ -63,7 +61,7 @@
               </div>
             </li>
             <li class="hard-skill-item">
-              <span>HTML</span>
+              <span>html</span>
               <div>
                 <i class="fa fa-heart"></i>
                 <i class="fa fa-heart"></i>
@@ -73,23 +71,23 @@
               </div>
             </li>
             <li class="hard-skill-item">
-              <span>PHOTOSHOP</span>
+              <span>photoshop</span>
               <div>
                 <i class="fa fa-heart"></i>
                 <i class="fa fa-heart"></i>
-                <i class="fa fa-heart  skill-empty"></i>
-                <i class="fa fa-heart  skill-empty"></i>
-                <i class="fa fa-heart  skill-empty"></i>
+                <i class="fa fa-heart"></i>
+                <i class="fa fa-heart skill-empty"></i>
+                <i class="fa fa-heart skill-empty"></i>
               </div>
             </li>
             <li class="hard-skill-item">
-              <span>WEB DESIGN</span>
+              <span>web design</span>
               <div>
                 <i class="fa fa-heart"></i>
                 <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart  skill-empty"></i>
-                <i class="fa fa-heart  skill-empty"></i>
+                <i class="fa fa-heart skill-empty"></i>
+                <i class="fa fa-heart skill-empty"></i>
+                <i class="fa fa-heart skill-empty"></i>
               </div>
             </li>
           </ul>
