--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Girl's day</title>
+    <title>Portfolio</title>
     <link rel="icon" href="images/icon.png" />
     <link rel="stylesheet" href="styles.css" />
     <link
