Mobile first version

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/logo.svg" />
+        <img src="./images/logo.svg" />
       </div>
       <nav>
         <ul>
@@ -30,72 +30,73 @@
     </header>
     <section class="main" id="aboutme">
       <article>
-        <div class="left">
-          <h1>About me</h1>
-          <p>
-            Audrey Hepburn was a British actress, model, dancer, and
-            humanitarian. Recognised as a film and fashion icon. She was ranked
-            by the American Film Institute as the third-greatest female screen
-            legend in Golden Age Hollywood, and was inducted into the
-            International Best Dressed List Hall of Fame.
-          </p>
+         <!-- <div class="left"> -->
+        <div>
+        <h1>About me</h1>
+        <p>
+          Audrey Hepburn was a British actress, model, dancer, and humanitarian.
+          Recognised as a film and fashion icon. She was ranked by the American
+          Film Institute as the third-greatest female screen legend in Golden
+          Age Hollywood, and was inducted into the International Best Dressed
+          List Hall of Fame.
+        </p>
         </div>
-        <div class="right">
-          <img src="/images/audreyHep.png" alt="Audrey picture" />
-        </div>
+         <!-- <div class="right">
+          <img src="./images/audreyHep.png" alt="Audrey picture" />
+        </div> -->
       </article>
     </section>
     <section id="skills">
-      <div class="left">
-        <article>
-          <h1>Skills</h1>
-          <ul>
-            <li class="hard-skill-item">
-              <span>css</span>
-              <div>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-              </div>
-            </li>
-            <li class="hard-skill-item">
-              <span>html</span>
-              <div>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-              </div>
-            </li>
-            <li class="hard-skill-item">
-              <span>photoshop</span>
-              <div>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart skill-empty"></i>
-                <i class="fa fa-heart skill-empty"></i>
-              </div>
-            </li>
-            <li class="hard-skill-item">
-              <span>web design</span>
-              <div>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart"></i>
-                <i class="fa fa-heart skill-empty"></i>
-                <i class="fa fa-heart skill-empty"></i>
-                <i class="fa fa-heart skill-empty"></i>
-              </div>
-            </li>
-          </ul>
-        </article>
-      </div>
+       <!-- <div class="left"> -->
+      <article>
+        <h1>Skills</h1>
+        <ul>
+          <li class="hard-skill-item">
+            <span>css</span>
+            <div>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+            </div>
+          </li>
+          <li class="hard-skill-item">
+            <span>html</span>
+            <div>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+            </div>
+          </li>
+          <li class="hard-skill-item">
+            <span>photoshop</span>
+            <div>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart skill-empty"></i>
+              <i class="fa fa-heart skill-empty"></i>
+            </div>
+          </li>
+          <li class="hard-skill-item">
+            <span>web design</span>
+            <div>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart"></i>
+              <i class="fa fa-heart skill-empty"></i>
+              <i class="fa fa-heart skill-empty"></i>
+              <i class="fa fa-heart skill-empty"></i>
+            </div>
+          </li>
+        </ul>
+      </article>
+<!-- </div> -->
       <div class="quote-parent">
         <div class="quote">
-          <img src="/images/quote-mark.svg" />
+          <img src="./images/quote-mark.svg" />
           <p class="quote-text">
             For me the only things of interests are those linked to the heart.
           </p>
